# oracle-tac-apps

./: .gitignore  LICENSE  README.md
apps/: README.md  config.toml  raw.csv
apps/golang/: README.md  go.mod  go.sum  main.go
apps/golang/cmd/: cleanup.go  cleanup_test.go  ingest.go  ingest_test.go  main_test.go  remove.go  remove_test.go  reset.go  reset_test.go  root.go  root_test.go
apps/golang/oracle-ha/: main.go
apps/golang/oracle-tac/: main.go
apps/java/: README.md
apps/java/oha/: pom.xml
apps/python/: README.md  pyproject.toml
apps/python/oha/: __main__.py  cli.py
apps/python/otac/: __main__.py  cli.py
apps/python/tests/: conftest.py  factory.py  test_cleanup.py  test_cli.py  test_config.py  test_delete.py  test_ingest.py  test_injest.py  test_insert.py  (+2 more)
examples/: README.md  config.toml
examples/golang/: README.md  go.mod  go.sum
examples/java/: README.md
examples/python/: README.md  pyproject.toml
examples/python/oha/: __main__.py  cli.py
examples/python/oha/cmd/: __init__.py  config.py  delete.py  insert.py  reset.py  update.py
examples/python/oha/commands/: __init__.py  config.py  delete.py  insert.py  reset.py  update.py
examples/python/tests/: conftest.py  test_cli.py  test_config.py  test_delete.py  test_insert.py  test_reset.py  test_update.py
examples/python/tests/static/: config.toml
examples/python/tests/test_e2e/: test_cli.py
orchestrate/: README.md  applications.yml  apps.yml  database.yml  driver.yml  inventory  site.yml  system.yml
orchestrate/group_vars/: remotes.yml
producer/: README.md  main.go  raw.txt
(+94 files in other folders)
