[tool.poetry]
name = "oracle-ha"
version = "0.1.0"
description = "A Python application for the High Availability in Oracle"
authors = ["Andrea Lauri <andrea.lauri86@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
oracle-ha = "oha.__main__:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -vv"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
